Closed Bug 213549 Opened 23 years ago Closed 23 years ago

regxpcom thinks SelfRegisterDll FAILED = successful registration.

Categories

(Core :: XPCOM, defect)

x86
BeOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

$ ./run-mozilla.sh ./regxpcom components/libxpcomsample-linux.so nsNativeComponentLoader: SelfRegisterDll(libxpcomsample-linux.so) Load FAILED with error:Not an executable Registration successful for components/libxpcomsample-linux.so mozhack@boffo:~/obj-i686-pc-linux-gnu-qt/dist/bin$ ./run-mozilla.sh ./regxpcom components/libxpcomsample-beos.so Type Manifest File: /mnt/ibm/mozhack/obj-i686-pc-linux-gnu-qt/dist/bin/components/xpti.dat nsNativeComponentLoader: SelfRegisterDll(libxpcomsample-beos.so) Load FAILED with error:libbe.so: cannot open shared object file: No such file or directory Registration successful for components/libxpcomsample-beos.so mozhack@boffo:~/obj-i686-pc-linux-gnu-qt/dist/bin$
mine
Assignee: dougt → timeless
$ ./run-mozilla.sh ./regxpcom components/*linux* nsNativeComponentLoader: SelfRegisterDll(libxpcomsample-linux.so) Load FAILED with error: Not an executable Registration failed: (80040154) components/libxpcomsample-linux.so
Attachment #128504 - Flags: review?(dougt)
wouldn't it be better if you just check for didRegister at the end of AutoRegisterComponent and it if is false, return NS_ERROR_FACTORY_NOT_REGISTERED: return (NS_FAILED(rv) || !didRegister) ? NS_ERROR_FACTORY_NOT_REGISTERED : NS_OK;
that won't work. the problem is that rv is failed because some other loader (js) set it that way. so you'd have: if (failed[which js did] or didn'tregister [ false, native registered] ==> true) => return failure => same as current state.
Status: NEW → ASSIGNED
Comment on attachment 128504 [details] [diff] [review] store registration failure and return successful registration youre right. check it in.
Attachment #128504 - Flags: review?(dougt) → review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: