Bug 213549 regxpcom thinks SelfRegisterDll FAILED = successful registration. r=dougt